--- a/Bulky/BulkyWeb/Views/Category/Index.cshtml
+++ b/Bulky/BulkyWeb/Views/Category/Index.cshtml
@@ -1,7 +1,5 @@
 ﻿@model List<Category>
-
-
- <div class="container">
+<div class="container">
      <div class="row pt-4 pt-3">
             <div class="col-6">
                 <h2 class="text-primary">
@@ -23,6 +21,9 @@
         <th>
             Display Order
         </th>
+        <th>
+
+        </th>
     </tr>
     </thead>
     <tbody>
@@ -34,6 +35,16 @@
                 </td>
                 <td>
                     @obj.DiplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash"></i> Delete
+                            </a>
+                    </div>
                 </td>
             </tr>
         }
