--- a/Bulky/BulkeyRazor_Temp/Pages/Categories/Index.cshtml
+++ b/Bulky/BulkeyRazor_Temp/Pages/Categories/Index.cshtml
@@ -9,7 +9,7 @@
             </h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-page="Categories/create"  class="btn btn-primary">
+            <a asp-page="/Categories/create"  class="btn btn-primary">
                 <i class="bi bi-plus"></i>  Create New Category
             </a>
         </div>
@@ -40,10 +40,10 @@
                     </td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-page="Categories/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-page="/Categories/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-page="Categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-page="/Categories/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash"></i> Delete
                             </a>
                         </div>
