--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,11 +18,11 @@
                 </a>
             </div>
         </div>
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped">
             <thead>
                 <tr>
                    <th>
-                       Product Name
+                        Title
                     </th>
                     <th>
                         ISBN
@@ -36,40 +36,15 @@
                      <th>
                         Category
                     </th>
+                   
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var obj in Model.OrderBy(u => u.Id))
-                {
-                    <tr>
-                        <td>
-                            @obj.Title
-                        </td>
-                        <td>
-                            @obj.ISBN
-                        </td>
-                        <td>
-                            @obj.Price
-                        </td>
-                        <td>
-                            @obj.Author
-                        </td>
-                        <td>
-                            @obj.Price
-                        </td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
-                                </a>
-                                <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
+            
         </table>
     </div>
 </div>
+
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
