--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 </a>
             </div>
         </div>
-        <table id="tblData" class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped" style="width: 100%;">
             <thead>
                 <tr>
                    <th>
@@ -35,6 +35,9 @@
                     </th>
                      <th>
                         Category
+                    </th
+                    <th>
+                      
                     </th>
                    
                 </tr>
