--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -59,8 +59,10 @@
          Made with <i class="bi bi-suit-heart-fill"></i> by fariskpjr
         </div>
     </footer>
+
     <script src="https://cdn.tiny.cloud/1/xr0h02t0irv1sqyopamrb6e2nopyx7gehyby8xt25smkmax0/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="//cdn.datatables.net/2.1.5/js/dataTables.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
