--- a/Bulky/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -8,7 +8,15 @@
                 <div class="col-12 p-1">
                     <div class="card border-0 p-3 shadow border-top border-5 rounded d-flex flex-column" style="flex-grow:1;">
                         <!-- Fix image height and object-fit to maintain aspect ratio -->
-                        <img src="@product.ImageUrl" class="card-img-top rounded" style="height: 200px; object-fit: cover;" />
+                        @if(product.ProductImages!= null && product.ProductImages.Count() > 0)
+                        {
+                            <img src="@product.ProductImages.FirstOrDefault().ImageUrl" class="card-img-top rounded"/>
+                        }
+                        else
+                        {
+                            <img src="~/Images/book.png" class="card-img-top rounded"/>
+                        }
+                       
                         <div class="card-body pb-0 d-flex flex-column justify-content-between">
                             <div>
                                 <p class="card-title h5 text-dark opacity-75 text-uppercase text-center">@product.Title</p>
